Compiling with source and target of JDK 1.8